# trafficmonitor

./: .gitignore  README.md  pyproject.toml  requirements_boxmot.txt
.cursor/rules/: memory.mdc  pythonml.mdc
docs/: ARCHITECTURE.md  COMPONENT_VEHICLE_TRACKER_DOCS.md  GAP_ANALYSIS.md  Inital_plan.md  README_BOXMOT.md  REQUIREMENTS.md
docs/Boxmot/: BOXMOT_INTEGRATION_GUIDE.md
docs/Irrelevant/: Inital_plan.md  MANUAL_INFERENCE_FROM_SCRATCH.md
examples/: boxmot_integration_example.py
scripts/: convert_to_onnx.py  download_model.py  test_lp_detector.py
src/traffic_monitor/: main.py  main_supervisor.py
src/traffic_monitor/config/: settings.yaml
src/traffic_monitor/services/: __init__.py  frame_grabber.py  lp_detector.py  ocr_reader.py  vehicle_counter.py  vehicle_detector.py  vehicle_tracker.py  visualizer.py
src/traffic_monitor/utils/: __init__.py  config_loader.py  constants.py  custom_types.py  distributor.py  logging_config.py
src/trafficmonitor/: main.py  main_supervisor.py
src/trafficmonitor/utils/: logging_config.py
test/: test_class_mapping.py  test_integration.py  test_logging_regression.py  test_resolution_scaling.py
test/services/: test_frame_grabber.py  test_lp_detector.py  test_ocr_reader.py  test_vehicle_counter.py  test_vehicle_detector.py  test_vehicle_tracker.py
