[project]
authors = [{name = "lkless", email = "leakless21@gmail.com"}]
name = "trafficmonitor"
requires-python = "< 3.12"
version = "0.1.0"
dependencies = ["opencv-python>=4.11.0.86,<5", "ultralytics>=8.3.135,<9"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
trafficmonitor = { path = ".", editable = true }

[tool.pixi.tasks]
