[project]
authors = [{name = "lkless", email = "leakless21@gmail.com"}]
name = "trafficmonitor"
requires-python = "< 3.12"
version = "0.1.0"
dependencies = ["opencv-python>=4.11.0.86,<5", "ultralytics>=8.3.135,<9", "onnx>=1.12.0,<1.18.0", "onnxslim>=0.1.53,<0.2", "onnxruntime>=1.22.0,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
trafficmonitor = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
dill = ">=0.4.0,<0.5"
